# amazon-captcha-solver

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build-and-publish-github-release.yaml
amazon_captcha_solver/: __init__.py  _resources.py  _solver.py  _typings.py  _utils.py  solver.py
amazon_captcha_solver/type_hints/: __init__.py  _type.py
amazon_captcha_solver/utils/: __init__.py  _handler.py  _read.py
